# filbench-eval

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_image.yaml
analysis/: README.md  compute_agreement.py  plot_agreement_mcf.py  plot_continuous_ft.py  plot_generation_results.py  plot_impact_size.py  plot_performance_trends.py  plot_price_per_model.py  plot_runtime_histogram.py  plot_survey_historical.py  plot_survey_topics.py  print_leaderboard.py  utils.py
plot/: plot_impact_size.py  utils.py
scripts/: plot_agreement.py  plot_agreement_mcf.py  plot_continuous_ft.py  plot_generation_results.py  plot_impact_size.py  plot_performance_trends.py  plot_price_per_model.py  plot_runtime_histogram.py  plot_survey_historical.py  plot_survey_topics.py  utils.py
src/filbench_eval/: __init__.py  compute_score.py  submit.py
